<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Unisample</string>
    <string name="action_take_photo">Take Pictures</string>
    <string name="action_choose_photo">Select</string>
    <string name="photo_select_failed">Choose failed</string>
    <string name="photo_crop_failed">Reduction failed</string>
    <string name="photo_take_failed">Take photo failed</string>
    <string name="photo_take_success">Take photo success</string>
    <string name="permission_explain_msg">Following permissions are required. Do you want to request for the next step?</string>
    <string name="permission_to_settings_msg">Permission request failed. Do you want to enter the System Settings to grant these permissions?</string>
    <string name="permission_fail">permission_fail</string>
    <string name="ds_unit_config">unit_config</string>
    <string name="unit_year">y</string>
    <string name="unit_month">m</string>
    <string name="unit_day">d</string>
    <string name="unit_day_count">days</string>
    <string name="unit_day_count_param"><xliff:g id="params1">%1$d</xliff:g> days</string>
    <string name="unit_hour">hr</string>
    <string name="unit_minute">min</string>
    <string name="unit_minute_param"><xliff:g id="params1">%1$d</xliff:g> minutes</string>
    <string name="unit_mmhg">mmHg</string>
    <string name="unit_mmhg_param"><xliff:g id="params1">%1$s</xliff:g> mmHg</string>
    <string name="unit_bmp">BMP</string>
    <string name="unit_bmp_unit"><xliff:g id="params1">%1$d</xliff:g> BMP</string>
    <string name="unit_level_param"><xliff:g id="params1">%1$d</xliff:g> Level</string>
    <string name="unit_second_param"><xliff:g id="params1">%1$d</xliff:g> Seconds</string>
    <string name="unit_km">km</string>
    <string name="unit_mi">mi</string>
    <string name="unit_step">steps</string>
    <string name="unit_k_calories">kCal</string>
    <string name="unit_km_param"><xliff:g id="params1">%1$s</xliff:g> km</string>
    <string name="unit_mi_param"><xliff:g id="params1">%1$s</xliff:g> mi</string>
    <string name="unit_step_param"><xliff:g id="params1">%1$d</xliff:g> steps</string>
    <string name="unit_k_calories_param"><xliff:g id="params1">%1$s</xliff:g> kCal</string>
    <string name="unit_calories_param"><xliff:g id="params1">%1$s</xliff:g> Cal</string>
    <string name="unit_fahrenheit_param"><xliff:g id="params1">%1$s</xliff:g> ℉</string>
    <string name="unit_centigrade_param"><xliff:g id="params1">%1$s</xliff:g> ℃</string>
    <string name="device_module">Device</string>
    <string name="device_bind">Bind Device</string>
    <string name="device_scan_bind">Scan code binding</string>
    <string name="device_others">Other devices</string>
    <string name="device_others_des">Devices bonded or connected will not appear in search results</string>
    <string name="device_bonded">Bonded device</string>
    <string name="device_connected">Connected device</string>
    <string name="device_bind_tips1">Make sure the watch is fully charged</string>
    <string name="device_bind_tips2">Keep the watch and the mobile phone within 0.5 meters</string>
    <string name="device_bind_tips3">Search for places with few Bluetooth devices</string>
    <string name="device_bind_tips4">Make sure the watch is not bonded or connected by another phone</string>
    <string name="device_scan_tips_location_service">Location Services is disabled and devices may not be discoverable.</string>
    <string name="device_scan_tips_error">Scanning error occurred</string>
    <string name="device_scan_tips_delay">Please wait a few seconds and try again</string>
    <string name="device_scan_tips_restart">Please wait a few seconds and try again, or restart bluetooth or mobile phone</string>
    <string name="device_cancel_bind">Close</string>
    <string name="device_unbind">Unbind</string>
    <string name="device_unbind_confirm_msg">Are you sure to unbind this device?</string>
    <string name="device_bind_success">Bind success</string>
    <string name="device_rebind">Rebind</string>
    <string name="device_reconnect">Reconnect</string>
    <string name="device_connect_auth_login_failed">The device may have been bound to another phone.</string>
    <string name="device_connect_auth_bind_failed">The device cancel bind or no response</string>
    <string name="device_connect_bg_run_settings">If the connection is unstable, try setting the option to run in the background.</string>
    <string name="device_disconnect_help">Unable to connect？</string>
    <string name="bg_run_settings_module">Background Running settings</string>
    <string name="bg_run_settings_des">You need to make some system settings so that APP can run in the background for a long time, for example:</string>
    <string name="bg_run_settings_1">Ignore battery optimization</string>
    <string name="bg_run_settings_2">Disabled power-saving mode</string>
    <string name="bg_run_settings_3">Allow background auto-start</string>
    <string name="bg_run_settings_4">Add white list to the system manager</string>
    <string name="module_sync">Sync</string>
    <string name="sync_state_idle">Pull down to sync data</string>
    <string name="sync_data_success">Sync success</string>
    <string name="sync_data_failed">Sync fail</string>
    <string name="sync_data_ongoing">Syncing data</string>
    <string name="module_user">User</string>
    <string name="action_loading">Loading…</string>
    <string name="action_deling">deleting…</string>
    <string name="action_updating">updating…</string>
    <string name="action_updating_progress">updating:</string>
    <string name="action_search">Search</string>
    <string name="action_turn_on">Turn On</string>
    <string name="action_grant">Grant</string>
    <string name="action_to_set">To Set</string>
    <string name="action_save">Save</string>
    <string name="action_start">Start</string>
    <string name="action_retry">Retry</string>
    <string name="action_select">Select</string>
    <string name="action_add">Add</string>
    <string name="tip_prompt">Hint</string>
    <string name="tip_none">None</string>
    <string name="tip_i_know">I know</string>
    <string name="tip_please_wait">Please wait&#8230;</string>
    <string name="tip_save_success">Save success</string>
    <string name="tip_success">Success</string>
    <string name="tip_failed">Failed</string>
    <string name="tip_download_failed">Download failed</string>
    <string name="tip_current_no_data">No data yet</string>
    <string name="tip_load_error">Load failed, click reload</string>
    <string name="tip_disabled">Disabled</string>
    <string name="tip_setting_loading">Setting up…</string>
    <string name="tip_setting_fail">Setup failed, do you want to try again?</string>
    <string name="tip_setting_success">Setup success</string>
    <string name="percent_param" translatable="false"><xliff:g id="params1">%1$d</xliff:g>%%</string>
    <string name="exercise_goal">Exercise Goal</string>
    <string name="exercise_goal_step">Step</string>
    <string name="exercise_goal_distance">Distance</string>
    <string name="exercise_goal_calories">Calories</string>
    <string name="exercise_goal_activity">Activity Duration</string>
    <string name="exercise_data_time">time</string>
    <string name="exercise_data_distance">distance</string>
    <string name="exercise_data_calories">calories</string>
    <string name="exercise_data_step">step</string>
    <string name="exercise_data_average_pace">average pace</string>
    <string name="exercise_data_max_pace">max pace</string>
    <string name="exercise_data_min_pace">min pace</string>
    <string name="exercise_data_average_speed">average speed</string>
    <string name="exercise_data_max_speed">max speed</string>
    <string name="exercise_data_min_speed">min speed</string>
    <string name="exercise_data_average_step_frequency">average step frequency</string>
    <string name="exercise_data_max_step_frequency">max step frequency</string>
    <string name="account_sign_in">Sign In</string>
    <string name="account_input_username_hint">Input username</string>
    <string name="account_input_password_hint">Input password</string>
    <string name="account_no">No account?</string>
    <string name="account_input_height_hint">Input height(cm),such as \"175\"</string>
    <string name="account_input_weight_hint">Input weight(kg),such as \"60\"</string>
    <string name="account_sex_male">Male</string>
    <string name="account_sex_female">Female</string>
    <string name="account_input_age_hint">Input age,such as \"20\"</string>
    <string name="account_edit_birthday">Edit User BirthdaY</string>
    <string name="ds_sound_touch_config">Sound Touch Feedback Config</string>
    <string name="ds_sedentary_config">Sedentary Reminder Config</string>
    <string name="ds_drink_water_config">Drink Water Reminder Config</string>
    <string name="ds_heart_rate_config">Heart Rate Config</string>
    <string name="ds_exercise_heart_rate_high_alert">Exercise heart rate too high alert</string>
    <string name="ds_exercise_heart_rate_high_alert_switch">Exercise heart rate too high alert switch</string>
    <string name="ds_quiet_heart_rate_high_alert">Quiet heart rate alert</string>
    <string name="ds_quiet_heart_rate_high_alert_switch">Quiet heart rate alert switch</string>
    <string name="ds_automatic_heart_rate_measurement">Automatic heart rate measurement</string>
    <string name="ds_max_heart_rate">Max heart rate</string>
    <string name="ds_heart_rate_interva">Heart rate interval</string>
    <string name="ds_turn_wrist_lighting_config">Raise to Wake Config</string>
    <string name="ds_dial_installed">Dial Installed</string>
    <string name="ds_dial_installed_des">View the watch dials installed on the watch and support removal</string>
    <string name="ds_dial_test_install">Dial Test install</string>
    <string name="ds_dial_test_install_des">Used to test install dial</string>
    <string name="ds_dial_custom">Dial Custom</string>
    <string name="ds_notification_telephony">Telephony</string>
    <string name="ds_notification_sms">SMS</string>
    <string name="ds_notification_qq">QQ</string>
    <string name="ds_notification_wechat">WeChat</string>
    <string name="ds_notification_facebook">Facebook</string>
    <string name="ds_notification_twitter">Twitter</string>
    <string name="ds_notification_instagram">Instagram</string>
    <string name="ds_notification_whatsapp">WhatsApp</string>
    <string name="ds_notification_line">Line</string>
    <string name="ds_notification_messenger">Facebook Messenger</string>
    <string name="ds_notification_kakao_talk">Kakao Talk</string>
    <string name="ds_notification_skype">Skype</string>
    <string name="ds_notification_email">Email</string>
    <string name="ds_notification_others">Others App</string>
    <string name="ds_find_device">Find Device</string>
    <string name="ds_stop_find_device">Stop Find Device</string>
    <string name="ds_device_reboot">Device Reboot</string>
    <string name="ds_device_disconnet">Device Disconnect</string>
    <string name="ds_device_reset">Device Unbind</string>
    <string name="ds_device_local_ota">Device Local Ota</string>
    <string name="app_view">app_view</string>
    <string name="language_set">language</string>
    <string name="ds_sleep_config">sleep config</string>
    <string name="data_step">Step</string>
    <string name="data_calorie">Calories</string>
    <string name="data_activity_duration">Activity Duration</string>
    <string name="data_sleep">Sleep</string>
    <string name="data_heart_rate">Heart Rate</string>
    <string name="data_oxygen">Oxygen</string>
    <string name="data_sport">Sport</string>
    <string name="data_all">All Data</string>
    <string name="data_daily_duration">Sport Activity Duration Distribution</string>
</resources>