<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?dividerVertical"
        android:orientation="vertical"
        android:showDividers="middle|end">

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_unit_config"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_unit_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_sound_touch_feedback"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_sound_touch_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_sedentary"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_sedentary_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_drink_water"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_drink_water_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_heart_rate"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_heart_rate_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_turn_wrist_lighting"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_turn_wrist_lighting_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_sleep"
            android:visibility="gone"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/ds_sleep_config" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_app_view"
            android:visibility="gone"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/app_view" />

        <com.github.kilnn.tool.widget.item.PreferenceItem
            android:id="@+id/item_language"
            style="@style/Widget.Sample.PreferenceView.Item.Text"
            app:preferenceTitle="@string/language_set" />

    </LinearLayout>

</ScrollView>