<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?dividerVertical"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tv_refresh_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_step"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_step" />
            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_calories"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_calorie" />
            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_activity_duration"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_activity_duration" />
            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_activity_distance"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/exercise_data_distance" />
            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_sleep"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_sleep" />

            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_heart_rate"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_heart_rate" />

            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_oxygen"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_oxygen" />

            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_sport"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_sport" />
            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_all"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_all" />
            <com.github.kilnn.tool.widget.item.PreferenceItem
                android:id="@+id/item_daily_activity_duration"
                style="@style/Widget.Sample.PreferenceView.Item.Text"
                app:preferenceTitle="@string/data_daily_duration" />
        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>