<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">
    <TextView
        android:id="@+id/tv_name"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/account_input_height_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/account_input_weight_hint"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/account_sex_male" />

        <RadioButton
            android:id="@+id/rb_sex_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_sex_female" />

    </RadioGroup>

    <com.github.kilnn.tool.widget.item.PreferenceItem
        android:id="@+id/pi_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Sample.PreferenceView.Item.Text"
        android:layout_marginTop="16dp"
        android:hint="@string/account_input_age_hint"
        app:preferenceTitle="@string/account_edit_birthday" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_save" />

</LinearLayout>